--- a/src/app/Components/pagenotfound/pagenotfound.component.html
+++ b/src/app/Components/pagenotfound/pagenotfound.component.html
@@ -1,1 +1,52 @@
-<p>pagenotfound works!</p>
+<app-head></app-head>
+<app-header></app-header>
+<div class="home page-template page-template-template page-template-homepage-template page-template-templatehomepage-template-php page page-id-10 sidebar-active elementor-default elementor-kit-2411 elementor-page elementor-page-10 e--ua-firefox"
+    data-elementor-device-mode="desktop">
+    <div class="body-innner-content ">
+        <div data-elementor-type="wp-post" data-elementor-id="10" class="elementor elementor-10"
+            data-elementor-settings="[]">
+            <div class="elementor-inner">
+                <div class="elementor-section-wrap">
+                    <div id="banner-area" class="banner-area bg-overlay banner-bg">
+                        <div class="container-fluid p-0 ">
+                            <div class="banner-heading banner-heading-full"
+                                style="background-image:url(//demo.themewinter.com/wp/buildbench/wp-content/uploads/2019/03/image01-min.png);">
+                                <h3 class="banner-title mt-192">
+                                    <div _ngcontent-vvm-c58="" class="form-group text-right mb-0"><input _ngcontent-vvm-c58="" type="button" value="Return To Home" class="wpcf7-form-control has-spinner wpcf7-submit button btn btn-primary" (click)="Home()"><span _ngcontent-vvm-c58="" class="wpcf7-spinner"></span></div>
+                                </h3>
+                            </div>
+                        </div><!-- Container end -->
+                    </div>
+                    <section _ngcontent-eui-c54="" data-id="515cbf4" data-element_type="section"
+                        class="elementor-section elementor-top-section elementor-element elementor-element-515cbf4 elementor-section-boxed elementor-section-height-default elementor-section-height-default">
+                        <div _ngcontent-eui-c54="" class="elementor-container elementor-column-gap-default">
+                            <div _ngcontent-eui-c54="" class="elementor-row">
+                                <div _ngcontent-eui-c54="" data-id="39f5a7b" data-element_type="column"
+                                    class="elementor-column elementor-col-100 elementor-top-column elementor-element elementor-element-39f5a7b">
+                                    <div _ngcontent-eui-c54=""
+                                        class="elementor-column-wrap elementor-element-populated">
+                                        <div _ngcontent-eui-c54="" class="elementor-widget-wrap">
+                                            <div _ngcontent-eui-c54="" data-id="391ff1e" data-element_type="widget"
+                                                data-widget_type="buildbench-title.default"
+                                                class="elementor-element elementor-element-391ff1e elementor-widget elementor-widget-buildbench-title">
+                                                <div _ngcontent-eui-c54="" class="elementor-widget-container">
+                                                    <div _ngcontent-eui-c54="" class="section-heading-content">
+                                                        <h2 _ngcontent-eui-c54="" class="section-title"><span
+                                                                _ngcontent-eui-c54="" class="sub-title"><h1>
+                                                                404</h1></span> Page Not Found </h2>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<app-footer></app-footer>
+<app-scripts></app-scripts>
