--- a/src/app/Components/services/services.component.html
+++ b/src/app/Components/services/services.component.html
@@ -79,7 +79,7 @@
                                                 _ngcontent-ssq-c56="" src="/assets/Images/planner.png"></div>
                                         <div _ngcontent-ssq-c56="" class="ts-service-box-info">
                                             <h3 _ngcontent-ssq-c56="" class="ts-title"><a _ngcontent-ssq-c56=""
-                                                    href="https://demo.themewinter.com/wp/buildbench/blog/service/material-supply/">Events</a>
+                                                    href="javascript:void(0)" >Events</a>
                                             </h3>
                                             <p _ngcontent-ssq-c56="">Benefit of the socie where we oper ate success for
                                                 the website</p>
