--- a/src/app/Components/Evenements/addevenement/addevenement.component.html
+++ b/src/app/Components/Evenements/addevenement/addevenement.component.html
@@ -11,7 +11,7 @@
                 <div _ngcontent-krf-c66="" _ngcontent-yjn-c66="" class="elementor-section-wrap">
                     <form _ngcontent-krf-c66="" novalidate="" _ngcontent-yjn-c66="" _ngcontent-kdb-c51=""
                             id="mc4wp-form-1" method="post" data-id="828" data-name=""
-                            class="mc4wp-form mc4wp-form-828 ng-untouched ng-pristine ng-valid" (ngSubmit)="save()" #userForm="ngForm">
+                            class="mc4wp-form mc4wp-form-828 ng-untouched ng-pristine ng-valid" (ngSubmit)="AddEvent()" #userForm="ngForm">
                     <div class="row">  
                         <div class="col-md-5 col-lg-1"> </div> 
                         
