--- a/src/app/Components/Evenements/addevenement/addevenement.component.html
+++ b/src/app/Components/Evenements/addevenement/addevenement.component.html
@@ -1,148 +1,71 @@
 <app-head></app-head>
 <app-header></app-header>
-<br><br><br>
-<app-addeventslider></app-addeventslider><br>
-<div class="home page-template page-template-template page-template-homepage-template page-template-templatehomepage-template-php page page-id-10 sidebar-active elementor-default elementor-kit-2411 elementor-page elementor-page-10 e--ua-firefox" style="background-color: #1a1831;"
-    data-elementor-device-mode="desktop">
+<div class="home page-template page-template-template page-template-homepage-template page-template-templatehomepage-template-php page page-id-10 sidebar-active elementor-default elementor-kit-2411 elementor-page elementor-page-10 e--ua-firefox" data-elementor-device-mode="desktop">
     <div class="body-innner-content ">
-        <div data-elementor-type="wp-post" data-elementor-id="10" class="elementor elementor-10"
-            data-elementor-settings="[]">
-            <div _ngcontent-yjn-c66="" class="elementor-inner">
-                <div _ngcontent-krf-c66="" _ngcontent-yjn-c66="" class="elementor-section-wrap">
-                    <form _ngcontent-krf-c66="" novalidate="" _ngcontent-yjn-c66="" _ngcontent-kdb-c51=""
-                            id="mc4wp-form-1" method="post" data-id="828" data-name=""
-                            class="mc4wp-form mc4wp-form-828 ng-untouched ng-pristine ng-valid" (ngSubmit)="AddEvent()" #userForm="ngForm">
-                    <div class="row">  
-                        <div class="col-md-5 col-lg-1"> </div> 
-                        
-                        <div _ngcontent-krf-c66="" _ngcontent-yjn-c66="" _ngcontent-kdb-c51="" class="col-md-5 col-lg-3">
-                        
-                            <div _ngcontent-krf-c66="" _ngcontent-yjn-c66="" _ngcontent-kdb-c51=""
-                                class="mc4wp-form-fields">
-                                <div _ngcontent-krf-c66="" _ngcontent-yjn-c66="" _ngcontent-kdb-c51=""
-                                    class="ts-footer-info-box text-center"><span _ngcontent-krf-c66=""
-                                        _ngcontent-yjn-c66="" _ngcontent-kdb-c51="" class="box-border"></span>
-                                    <h3 _ngcontent-krf-c66="" _ngcontent-yjn-c66="" _ngcontent-kdb-c51=""
-                                        class="widget-title">Add Event </h3>
-                                    <div _ngcontent-krf-c66="" _ngcontent-yjn-c66="" _ngcontent-kdb-c51=""
-                                        class="intro-form">
-                                        <div _ngcontent-krf-c66="" _ngcontent-yjn-c66="" _ngcontent-kdb-c51=""
-                                            id="ts-contactMe" class="contactMe small">
-                                            <div _ngcontent-krf-c66="" _ngcontent-yjn-c66="" _ngcontent-kdb-c51=""
-                                                class="form-row form-row-second">
-                                                <div _ngcontent-krf-c66="" _ngcontent-yjn-c66="" _ngcontent-kdb-c51=""
-                                                    class="col-md-12"><input _ngcontent-krf-c66="" type="text"
-                                                        name="event.title" data-displayname="Event Title"
-                                                        placeholder="Event Title" required="" class="field" [(ngModel)]="event.title"></div>
-                                            </div>
-                                            <div _ngcontent-krf-c66="" class="form-row form-row-second">
-                                                <div _ngcontent-krf-c66="" class="col-md-12"><input
-                                                        _ngcontent-krf-c66="" type="textarea" name="event.description"
-                                                        data-displayname="Event Description"
-                                                        placeholder="Event Description" required="" [(ngModel)]="event.description"></div>
-                                            </div>
-                                            <div _ngcontent-krf-c66="" class="form-row form-row-second"><b
-                                                    _ngcontent-krf-c66="">Event Starting Date :<br
-                                                        _ngcontent-krf-c66=""></b>
-                                                <div _ngcontent-krf-c66="" class="col-md-12"><input
-                                                        _ngcontent-krf-c66="" type="date" name="event.dateStart"
-                                                        data-displayname="Event Starting Date"
-                                                        placeholder="Event Starting Date" required="" [(ngModel)]="event.dateStart"></div>
-                                            </div>
-                                            <div _ngcontent-krf-c66="" class="form-row form-row-second"><b
-                                                    _ngcontent-krf-c66="">Event Ending Date :<br
-                                                        _ngcontent-krf-c66=""></b>
-                                                <div _ngcontent-krf-c66="" class="col-md-12"><input
-                                                        _ngcontent-krf-c66="" type="date" name="event.dateEnd"
-                                                        data-displayname="Event Ending Date"
-                                                        placeholder="Event Ending Date" required="" [(ngModel)]="event.dateEnd"></div>
-                                            </div>
-                                            <div _ngcontent-krf-c66="" class="form-row form-row-second"><b
-                                                    _ngcontent-krf-c66="">Event Avariable Places :<br
-                                                        _ngcontent-krf-c66=""></b>
-                                                <div _ngcontent-krf-c66="" class="col-md-12"><input
-                                                        _ngcontent-krf-c66="" type="number" name="event.npDisponible"
-                                                        data-displayname="npDisponible"
-                                                        placeholder="Event Avariable Places.." required="" [(ngModel)]="event.npDisponible"></div>
-                                            </div>
-                                            
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        
-                    </div>
-                    <div _ngcontent-krf-c66="" _ngcontent-yjn-c66="" _ngcontent-kdb-c51="" class="col-md-5 col-lg-3">
-                        
-                            <div _ngcontent-krf-c66="" _ngcontent-yjn-c66="" _ngcontent-kdb-c51=""
-                                class="mc4wp-form-fields">
-                                <div _ngcontent-krf-c66="" _ngcontent-yjn-c66="" _ngcontent-kdb-c51=""
-                                    class="ts-footer-info-box text-center"><span _ngcontent-krf-c66=""
-                                        _ngcontent-yjn-c66="" _ngcontent-kdb-c51="" class="box-border"></span>
-                                    <h3 _ngcontent-krf-c66="" _ngcontent-yjn-c66="" _ngcontent-kdb-c51=""
-                                        class="widget-title"> </h3>
-                                    <div _ngcontent-krf-c66="" _ngcontent-yjn-c66="" _ngcontent-kdb-c51=""
-                                        class="intro-form">
-                                        <div _ngcontent-krf-c66="" _ngcontent-yjn-c66="" _ngcontent-kdb-c51=""
-                                            id="ts-contactMe" class="contactMe small">
-                                            <div _ngcontent-krf-c66="" class="form-row form-row-second"><b
-                                                _ngcontent-krf-c66="">Event Max Places :<br
-                                                    _ngcontent-krf-c66=""></b>
-                                            <div _ngcontent-krf-c66="" class="col-md-12"><input
-                                                    _ngcontent-krf-c66="" type="number" name="event.npMax"
-                                                    data-displayname="event.npMax" placeholder="Event Max Places.."
-                                                    required="" [(ngModel)]="event.npMax"></div>
-                                        </div>
-                                            <div class="form-row form-row-second"><b>Event Type:<br></b>
-                                                <div class="col-md-12"><select>
-                                                    <option>--Choose Type--</option>
-                                                    <option *ngFor="let o of listeventtype" (click)="Type(o);">{{o}}</option>
-                                                 </select></div>
-                                            </div>
-                                            
-                                            <div class="form-row form-row-second"><b>Event is With Troopy ?<br></b>
-                                                <div class="col-md-12"><input type="option" name="event.npMax" data-displayname="trouphy" placeholder="Event Troophy.." required="" [(ngModel)]="event.trouphy"
-                                                        ></div> 
-                                            </div>
-                                            <div class="form-row form-row-second"><b>Event Tags:<br></b>
-                                                <div class="col-md-12"><select>
-                                                    <option>--Choose Tag--</option>
-                                                    <option *ngFor="let o of listeventtags" (click)="Tag(o);">{{o}}</option>
-                                                 </select></div>
-                                            </div>
-                                            <div class="form-row form-row-second"><b>Event Points:<br></b>
-                                                <div class="col-md-12"><input type="option" name="event.eventpoints" data-displayname="eventpoints" placeholder="Event points.." required="" [(ngModel)]="event.eventpoints"
-                                                        ></div>
-                                            </div>
-                                            
-                                            <div _ngcontent-krf-c66="" _ngcontent-yjn-c66="" _ngcontent-kdb-c51=""
-                                                class="col-md-12 form-btn"><button _ngcontent-krf-c66=""
-                                                    _ngcontent-yjn-c66="" _ngcontent-kdb-c51="" type="submit"
-                                                    data-sending="Sending..." data-text="get discount"
-                                                    class="btn btn-bordered">Confirm <i _ngcontent-krf-c66=""
-                                                        _ngcontent-yjn-c66="" _ngcontent-kdb-c51=""
-                                                        class="fa fa-check"></i></button></div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        
-                    </div>
-                    <div _ngcontent-krf-c66="" _ngcontent-yjn-c66="" _ngcontent-kdb-c51="" class="col-md-2 col-lg-1">
-                     
-                      </div>
-                    <div _ngcontent-krf-c66="" _ngcontent-yjn-c66="" _ngcontent-kdb-c51="" class="col-md-5 col-lg-3">
-                        <br><br><br><br>
-                  <img src="assets/AddEventIllustration.png">
-                </div>
-                </div>
-            </form>
+        <div data-elementor-type="wp-post" data-elementor-id="10" class="elementor elementor-10" data-elementor-settings="[]">
+            <div class="elementor-inner">
+                <div class="elementor-section-wrap">
+                    <app-addeventslider></app-addeventslider>
+                    <form action='' class='form' (ngSubmit)="AddEvent()">
+                        <p class='field required'>
+                          <label class='label required' for='name'>Event Title</label>
+                          <input class='text-input' id='name' name='name' required type='text' [(ngModel)]="event.title">
+                        </p>
+                        <p class='field required half'>
+                          <label class='label' for='email'>Starting Date</label>
+                          <input class='text-input' id='email' name='email' required type='date' [(ngModel)]="event.dateStart">
+                        </p>
+                        <p class='field half'>
+                          <label class='label' for='phone'>Ending Date</label>
+                          <input class='text-input' id='phone' name='phone' type='date'  [(ngModel)]="event.dateEnd">
+                        </p>
+                        <p class='field half required'>
+                          <label class='label' for='login'>Event Points</label>
+                          <input class='text-input' id='login' name='login' required type='number' [(ngModel)]="event.eventpoints">
+                        </p>
+                        <p class='field half required'>
+                          <label class='label' for='password'>Avariable Places </label>
+                          <input class='text-input' id='password' name='password' required type='number'[(ngModel)]="event.npDisponible">
+                        </p>
+                        <div class='field'>
+                          <label class='label'>Event Type?</label>
+                          <ul class='checkboxes'>
+                            <li class='checkbox'  *ngFor="let x of listeventtype"(click)="Type(x)" name="x" id="x" [ngClass]="{'green' : Typetoggle, 'red': !Typetoggle}">
+                              <input class='checkbox-input' type='checkbox' >
+                              <label class='checkbox-label'>{{x}}</label>
+                            </li>
+                          </ul>
+                        </div>
+                        <div class='field'>
+                          <label class='label'>Event Tag</label>
+                          <ul class='options' >
+                            <li class='option' *ngFor="let x of listeventtags" (click)="Tag(x)" name="x" id="x" [ngClass]="{'green' : Tagtoggle, 'red': !Tagtoggle}">
+                              <input class='option-input' name='option' type='radio'>
+                              <label class='option-label' >{{x}}</label>
+                            </li>
+                           
+                          </ul>
+                        </div>
+                        <p class='field half'>
+                            <label class='label' for='select'>Event Has a Trouphy Reward ?</label>
+                            <select class='select' id='select' [(ngModel)]="event.trouphy" name="trouphy">
+                              <option value='1'>Yes</option>
+                              <option value='0'>No</option>
+                            </select>
+                          </p>
+                        <p class='field'>
+                          <label class='label' for='about'>Event Description</label>
+                          <textarea class='textarea' cols='50' id='about' name='description' rows='4' [(ngModel)]="event.description"></textarea>
+                        </p>
+                      
+                        <p class='field half'>
+                          <input class='button' type='submit' value='Add Event' style="background-color: #1fb79b;">
+                        </p>
+                      </form>
                 </div>
             </div>
-
         </div>
     </div>
 </div>
-
 <app-footer></app-footer>
 <app-scripts></app-scripts>
