--- a/src/app/Components/Evenements/evenements/evenements.component.html
+++ b/src/app/Components/Evenements/evenements/evenements.component.html
@@ -50,6 +50,7 @@
                               </div>
                                           </div>
                           </div> 
+                         
                        <div class="elementor-container elementor-column-gap-default">
                            
                             <div class="elementor-row">
@@ -61,6 +62,28 @@
                         <div class="elementor-element elementor-element-1240ec5 elementor-widget elementor-widget-buildbench-latestnews" data-id="1240ec5" data-element_type="widget" data-widget_type="buildbench-latestnews.default">
                     <div class="elementor-widget-container">
                     <div class="row ts-latest-news  ">
+                        <div *ngIf="showLoader"><!-- so this div containing img will be dislpayed only when the showLoader is equal to true-->
+                            <div class='body' style="background-color: #1fb79b;">
+                                <span>
+                                  <span></span>
+                                  <span></span>
+                                  <span></span>
+                                  <span></span>
+                                </span>
+                                <div class='base'>
+                                  <span></span>
+                                  <div class='face'></div>
+                                </div>
+                              </div>
+                              <div class='longfazers'>
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                              </div>
+                              <h1>Loading Events</h1>
+                              
+                        </div>            
                               <div class="col-md-4" *ngFor="let x of listevenements | filter: filterTerm;">
                         <div class="single-latest-news">
                                                         <div class="latest-news-img">
