--- a/src/app/BackEnd/management/management.component.html
+++ b/src/app/BackEnd/management/management.component.html
@@ -129,11 +129,11 @@
         </li>
         <li class=" nav-item"><a href="javascript:void(0);"><i class="feather icon-list"></i><span class="menu-title" data-i18n="Charts">CRUD</span><span class="badge badge badge-pill badge-success float-right mr-2">List</span></a>
             <ul class="menu-content">
-                <li><a [routerLink]="['/AddEvent']"><i class="feather icon-plus-circle"></i><span class="menu-item" data-i18n="Apex">Add Event</span></a>
+                <li><a [routerLink]="['/Dashboard/AddEvent']"><i class="feather icon-plus-circle"></i><span class="menu-item" data-i18n="Apex">Add Event</span></a>
                 </li>
-                <li ><a href="javascript(void);" [routerLink]="['/UpdateEventList']"><i class="feather icon-refresh-ccw"></i><span class="menu-item" data-i18n="Chartjs">Update Event</span></a>
+                <li ><a href="javascript(void);" [routerLink]="['/Dashboard/UpdateEventList']"><i class="feather icon-refresh-ccw"></i><span class="menu-item" data-i18n="Chartjs">Update Event</span></a>
                 </li>
-                <li><a href="javascript(void);"  [routerLink]="['/DeleteEventList']"><i class="feather icon-trash"></i><span class="menu-item" data-i18n="Echarts">Delete Event</span></a>
+                <li><a href="javascript(void);"  [routerLink]="['/Dashboard/DeleteEventList']"><i class="feather icon-trash"></i><span class="menu-item" data-i18n="Echarts">Delete Event</span></a>
                 </li>
             </ul>
         </li>
