Update Dashboard template container

--- a/src/app/BackEnd/landing/landing.component.html
+++ b/src/app/BackEnd/landing/landing.component.html
@@ -1,4 +1,4 @@
-<app-dashboardcss></app-dashboardcss>
+<app-nav></app-nav>
 <div class="app-content content">
     <div class="content-overlay"></div>
     <div class="header-navbar-shadow"></div>
