--- a/src/app/BackEnd/Events/add-event/add-event.component.html
+++ b/src/app/BackEnd/Events/add-event/add-event.component.html
@@ -223,7 +223,7 @@
                     </div>
                 </div> 
                 </div>
-<app-footer></app-footer>
+<app-dashboardfooter></app-dashboardfooter>
 </div>
 </div>
 </div>
